tests/snapshots/roundtrip__commit_root_tree_create_table.snap
---
source: tests/roundtrip.rs
expression: "CommitRootTree::CREATE_TABLE"
---
CREATE TABLE IF NOT EXISTS commit_root_trees (
    commit_id BLOB NOT NULL,
    position INTEGER NOT NULL,
    is_remove INTEGER CHECK (is_remove IN (0, 1)) NOT NULL,
    tree_id BLOB NOT NULL,
    conflict_label TEXT NOT NULL,
    PRIMARY KEY (commit_id, position, is_remove)
);
