tests/snapshots/roundtrip__entry_create_table.snap
---
source: tests/roundtrip.rs
expression: "Entry::CREATE_TABLE"
---
CREATE TABLE IF NOT EXISTS entries (
    id INTEGER NOT NULL,
    value_number INTEGER,
    value_text TEXT,
    PRIMARY KEY (id)
) WITHOUT ROWID;
