tests/snapshots/roundtrip__entry_insert.snap
---
source: tests/roundtrip.rs
expression: "Entry::INSERT"
---
INSERT INTO entries (id, value_number, value_text) VALUES (:id, :value_number, :value_text) ON CONFLICT DO NOTHING
