tests/snapshots/roundtrip__entry_select.snap
---
source: tests/roundtrip.rs
expression: "Entry::SELECT"
---
SELECT id, value_number, value_text FROM entries
