tests/snapshots/roundtrip__fixed_bytes_column_ddl.snap
---
source: tests/roundtrip.rs
expression: "Fingerprint::CREATE_TABLE"
---
CREATE TABLE IF NOT EXISTS fingerprints (
    id INTEGER NOT NULL,
    digest BLOB NOT NULL,
    PRIMARY KEY (id)
) WITHOUT ROWID;
